# personal-website

./: .gitignore  AGENTS.md  ExecPLANS.md  PLAN.md  PLANS.md  README.md  pyproject.toml
.codex/skills/marimo-notebook-testing/: SKILL.md
.codex/skills/marimo-notebook-testing/agents/: openai.yaml
.codex/skills/personal-site-testing/: SKILL.md
.codex/skills/personal-site-testing/agents/: openai.yaml
.githooks/: pre-push
.github/workflows/: ci.yml
app/: main.py
app/services/: content.py  marimo_proxy.py  rss.py  seo.py  site_config.py
app/static/: base.css  courses.json  coursework.css  coursework.js  marimo_embed.css
app/views/: pages.py
content/pages/: about.md  home.md
content/posts/hello-world/: index.md
content/posts/semantic-entropy-probe-comparison/: index.md
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/coursework/: page.tsx
frontend/components/: CellDetails.tsx  ChartCell.tsx  CourseworkAssets.tsx  PostBlocks.tsx  PrimaryNav.tsx  SiteShell.tsx  ThemeToggle.tsx
frontend/lib/: content.ts
frontend/public/static/: courses.json  coursework.css  coursework.js
frontend/scripts/: parser.test.ts
frontend/scripts/fixtures/: chart.md  code.md  output.md  prose.md
personal_site.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: __init__.py  coursework_editor.py  dev.sh  prepush.sh  ui_screenshots.sh
tests/integration/: test_app.py
tests/unit/: test_content.py  test_marimo_proxy.py  test_seo.py
(+3 files in other folders)
